--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,3 +58,17 @@ swiftmailer:
 jms_security_extra:
     secure_controllers:  true
     secure_all_services: false
+  
+# Gravatar Configuration    
+ornicar_gravatar: 
+    rating: g
+    size: 60
+    default: mm
+    
+
+# Avalanche imagine Configuration   
+avalanche_imagine:
+    filters:
+        my_thumb:
+            type:    thumbnail
+            options: { size: [120, 90], mode: outbound }
