--- a/src/Blogger/BlogBundle/Resources/config/config.yml
+++ b/src/Blogger/BlogBundle/Resources/config/config.yml
@@ -1,7 +1,7 @@
 # src/Blogger/BlogBundle/Resources/config/config.yml
 parameters:
     # Blogger contact email address
-    blogger_blog.emails.contact_email: shao-chi.yu@stagiairs.kunstmaan.be
+    blogger_blog.emails.contact_email: alejandro.del.valle@stagiairs.kunstmaan.be
     # Blogger max latest comments
     blogger_blog.comments.latest_comment_limit: 10
          
